[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_script"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "หยุดเกมชั่วคราว"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "เล่นต่อ"

[node name="InventoryBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "กระเป๋า & สถานะ"

[node name="SaveBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "บันทึกเกม"

[node name="LoadBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "โหลดเกม"

[node name="OptionsBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "ตั้งค่า"

[node name="MainMenuBtn" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "กลับหน้าหลัก"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/InventoryBtn" to="." method="_on_inventory_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadBtn" to="." method="_on_load_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuBtn" to="." method="_on_main_menu_btn_pressed"]

